--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,13 +1,6 @@
-#root {
-    height: 100%;
-}
-
-html {
-    height: 100%;
-}
-
+#root,
+html,
 body {
-    margin: 0;
     height: 100%;
 }
 
@@ -17,6 +10,7 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+body {
     margin: 0;
 }
